force-app/main/default/objects/SupplierLimitDetails__c/SupplierLimitDetails__c.object-meta.xml
<CustomObject>
    <label>Ліміти постачальників (детально)</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SupplierLimitDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>