force-app/main/default/objects/SupplierLimitDetails__c/fields/Decade__c.field-meta.xml
<CustomField>
    <fullName>Decade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Декада</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>SupplierLimitDetails_Decade</relationshipName>
    <type>Lookup</type>
</CustomField>