force-app/main/default/objects/SupplierLimitDetails__c/fields/DecadeHeader__c.field-meta.xml
<CustomField>
    <fullName>DecadeHeader__c</fullName>
    <formula>Decade__r.HeaderName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Декада (повна)</label>
    <type>Text</type>
</CustomField>