force-app/main/default/objects/SupplierLimitDetails__c/fields/DecadePlan__c.field-meta.xml
<CustomField>
    <fullName>DecadePlan__c</fullName>
    <formula>Decade__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Декада плану</label>
    <type>Text</type>
</CustomField>