force-app/main/default/objects/SupplierLimitDetails__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <label>Ліміт, т</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>