force-app/main/default/objects/SupplierLimitDetails__c/fields/MonthTxt__c.field-meta.xml
<CustomField>
    <fullName>MonthTxt__c</fullName>
    <formula>CASE(TEXT(MonthLookup__r.Month__c),
&apos;1&apos;, &apos;Січень&apos;,
&apos;2&apos;, &apos;Лютий&apos;,
&apos;3&apos;, &apos;Березень&apos;,
&apos;4&apos;, &apos;Квітень&apos;,
&apos;5&apos;, &apos;Травень&apos;,
&apos;6&apos;, &apos;Червень&apos;,
&apos;7&apos;, &apos;Липень&apos;,
&apos;8&apos;, &apos;Серпень&apos;,
&apos;9&apos;, &apos;Вересень&apos;,
&apos;10&apos;, &apos;Жовтень&apos;,
&apos;11&apos;, &apos;Листопад&apos;,
&apos;12&apos;, &apos;Грудень&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Місяць</label>
    <type>Text</type>
</CustomField>