force-app/main/default/objects/SupplierLimitDetails__c/fields/ScrapSupplierLimit__c.field-meta.xml
<CustomField>
    <fullName>ScrapSupplierLimit__c</fullName>
    <label>Опис лиміту</label>
    <referenceTo>ScrapSupplierLimit__c</referenceTo>
    <relationshipName>SupplierLimitDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>