force-app/main/default/objects/SupplierLimitDetails__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>ScrapSupplierLimit__r.Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Стадія</label>
    <type>Text</type>
</CustomField>